# mau_mau_bot

./: .gitignore  Pipfile  actions.py  bot.py  flake.nix  pyproject.toml  requirements.txt  simple_commands.py
locales/: compile.sh
mau_mau_bot/: __init__.py  actions.py  bot.py  deck.py  game.py  game_manager.py  internationalization.py  player.py  settings.py  shared_vars.py  simple_commands.py  user_setting.py  utils.py
